--- a/src/SampleWPFMapApp/View/DemoMap.xaml
+++ b/src/SampleWPFMapApp/View/DemoMap.xaml
@@ -1,7 +1,7 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="SampleWPFMapApp.View.DemoMap"
-        Title="Leap4Map Demo App" Height="600" Width="800" WindowState="Maximized">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="NUI4Map.SampleWPFMapApp.View.DemoMap"
+        Title="NUI4Map Demo App" Height="600" Width="800" WindowState="Maximized">
 	
     <Grid Name="ViewGrid">
     	<Grid.ColumnDefinitions>
